--- a/extension/package.json
+++ b/extension/package.json
@@ -2,7 +2,7 @@
     "name": "nab-al-tools",
     "displayName": "NAB AL Tools",
     "description": "Development and translation management tool for AL language and Microsoft Dynamics 365 Business Central extensions.",
-    "version": "1.10.0",
+    "version": "1.11.2112202201",
     "publisher": "nabsolutions",
     "repository": {
         "type": "git",
@@ -37,7 +37,7 @@
         "url": "https://github.com/jwikman/nab-al-tools/issues"
     },
     "engines": {
-        "vscode": "^1.50.0"
+        "vscode": "^1.63.0"
     },
     "categories": [
         "Other",
@@ -613,7 +613,8 @@
         "semver": "^7.3.5",
         "strip-json-comments": "^3.1.1",
         "time-stamp": "^1.1.0",
-        "txml": "^4.0.1"
+        "txml": "^4.0.1",
+        "uuid": "^8.3.0"
     },
     "devDependencies": {
         "@types/adm-zip": "^0.4.34",
@@ -626,6 +627,7 @@
         "@types/node-powershell": "^3.1.1",
         "@types/semver": "^7.3.5",
         "@types/strip-json-comments": "^3.0.0",
+        "@types/uuid": "^8.3.3",
         "@types/vscode": "^1.50.0",
         "@types/xmldom": "^0.1.30",
         "@typescript-eslint/eslint-plugin": "^4.22.1",
