--- a/extension/package.json
+++ b/extension/package.json
@@ -250,6 +250,10 @@
             {
                 "command": "nab.importTranslationCSV",
                 "title": "NAB: Import Translations from .csv"
+            },
+            {
+                "command": "nab.convertToPermissionSet",
+                "title": "NAB: Convert to PermissionSet object"
             }
         ],
         "keybindings": [
@@ -636,7 +640,7 @@
         "@types/semver": "^7.3.5",
         "@types/strip-json-comments": "^3.0.0",
         "@types/uuid": "^8.3.3",
-        "@types/vscode": "^1.50.0",
+        "@types/vscode": "^1.63.0",
         "@types/xmldom": "^0.1.30",
         "@typescript-eslint/eslint-plugin": "^4.22.1",
         "@typescript-eslint/parser": "^4.22.1",
