--- a/extension/package.json
+++ b/extension/package.json
@@ -2,7 +2,7 @@
     "name": "nab-al-tools",
     "displayName": "NAB AL Tools",
     "description": "Development and translation management tool for AL language and Microsoft Dynamics 365 Business Central extensions.",
-    "version": "1.11.2112211421",
+    "version": "1.13.201022257",
     "publisher": "nabsolutions",
     "repository": {
         "type": "git",
@@ -253,7 +253,7 @@
             },
             {
                 "command": "nab.convertToPermissionSet",
-                "title": "NAB: Convert to PermissionSet object"
+                "title": "NAB: Convert to PermissionSet objects"
             }
         ],
         "keybindings": [
