--- a/extension/.prettierrc.json
+++ b/extension/.prettierrc.json
@@ -1,3 +1,13 @@
 {
-  "parser": "typescript"
+  "parser": "typescript",
+  "overrides": [
+    {
+      "files": [
+        "**/*.md"
+      ],
+      "options": {
+        "parser": "markdown"
+      }
+    }
+  ]
 }
