--- a/extension/.prettierrc.json
+++ b/extension/.prettierrc.json
@@ -2,11 +2,22 @@
   "parser": "typescript",
   "overrides": [
     {
-      "files": [
-        "**/*.md"
-      ],
+      "files": ["**/*.md"],
       "options": {
         "parser": "markdown"
+      }
+    },
+    {
+      "files": ["**/*.js"],
+      "options": {
+        "parser": "babel",
+        "tabWidth": 4
+      }
+    },
+    {
+      "files": "**/*.json",
+      "options": {
+        "parser": "json"
       }
     }
   ]
