--- a/extension/.prettierrc.json
+++ b/extension/.prettierrc.json
@@ -10,8 +10,7 @@
     {
       "files": ["**/*.js"],
       "options": {
-        "parser": "babel",
-        "tabWidth": 4
+        "parser": "babel"
       }
     },
     {
