--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm install
         working-directory: ${{env.working-directory}}
+      - run: npx prettier --check .
+        working-directory: ${{env.working-directory}}
       - name: Run tests
         uses: GabrielBB/xvfb-action@v1
         with:
