--- a/extension/.gitattributes
+++ b/extension/.gitattributes
@@ -1,3 +1,8 @@
 # Set default behavior to automatically normalize line endings.
-* text=auto
+*         text=auto
+*.ts      text eol=lf
+*.js      text eol=lf
+*.json    text eol=lf
+*.md      text eol=lf
+*.css     text eol=lf
 
