--- a/extension/.prettierrc.json
+++ b/extension/.prettierrc.json
@@ -1,3 +1,10 @@
 {
-  "parser": "typescript"
+  "overrides": [
+    {
+      "files": "**/*.json",
+      "options": {
+        "parser": "json-stringify"
+      }
+    }
+  ]
 }
