--- a/extension/package.json
+++ b/extension/package.json
@@ -681,6 +681,7 @@
     "nyc": "^15.1.0",
     "prettier": "2.2.1",
     "ts-loader": "^9.1.2",
+    "ts-node": "^10.4.0",
     "typescript": "^4.2.4",
     "vscode-test": "^1.5.0",
     "webpack": "^5.36.2",
