--- a/extension/package.json
+++ b/extension/package.json
@@ -613,6 +613,7 @@
     "lint": "eslint src --ext .js,.ts",
     "lint:fix": "eslint src --fix --ext .js,.ts .",
     "test": "node ./out/test/runTest.js",
+    "pretest:coverage": "npm run test-compile && npm run lint",
     "test:coverage": "node ./out/test/runTest-coverage.js"
   },
   "dependencies": {
