set lower thresholds

--- a/extension/.nycrc.json
+++ b/extension/.nycrc.json
@@ -19,5 +19,9 @@
     "lcov"
   ],
   "check-coverage": true,
-  "report-dir": ".coverage"
+  "report-dir": ".coverage",
+  "branches": 80,
+  "lines": 80,
+  "functions": 80,
+  "statements": 80
 }
