--- a/extension/.nycrc.json
+++ b/extension/.nycrc.json
@@ -20,8 +20,8 @@
   ],
   "check-coverage": true,
   "report-dir": ".coverage",
-  "branches": 60,
-  "lines": 80,
-  "functions": 80,
-  "statements": 80
+  "statements": 81,
+  "branches": 64,
+  "functions": 83,
+  "lines": 81
 }
