--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,5 +34,8 @@ jobs:
         with:
           run: npm test
           working-directory: ${{env.working-directory}}
+      - name: Display the path
+        run: ./cli-test.ps1
+        shell: pwsh  
       - name: Check Circular Dependencies
         run: node ${{env.working-directory}}node_modules/madge/bin/cli.js --warning --circular --extensions ts ${{env.working-directory}}src/extension.ts
