--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           run: npx nyc npm run test:coverage
           working-directory: ${{env.working-directory}}
-      - name: Display the path
+      - name: Test CLI
         run: ./cli-test.ps1
         shell: pwsh  
       - name: Check Circular Dependencies
