--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,6 +37,6 @@ jobs:
       - name: Test CLI functions
         shell: pwsh  
         run: |
-          .\scripts\cli-test.ps1
+          ./scripts/cli-test.ps1
       - name: Check Circular Dependencies
         run: node ${{env.working-directory}}node_modules/madge/bin/cli.js --warning --circular --extensions ts ${{env.working-directory}}src/extension.ts
