--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,8 +35,9 @@ jobs:
           run: npx nyc npm run test:coverage
           working-directory: ${{env.working-directory}}
       - name: Test CLI functions
+        if: ${{ matrix.os == 'windows-latest'}}
         shell: pwsh  
         run: |
-          ./scripts/cli-test.ps1
+          "${{env.GITHUB_ACTION_PATH}}/scripts/cli-test.ps1"
       - name: Check Circular Dependencies
         run: node ${{env.working-directory}}node_modules/madge/bin/cli.js --warning --circular --extensions ts ${{env.working-directory}}src/extension.ts
