--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,6 +21,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Hello Ubuntu
+        if: ${{ matrix.os == 'ubuntu-latest'}}
+        shell: pwsh  
+        run: |
+          & $env:GITHUB_ACTION_PATH/scripts/hello.ps1
+      - name: Hello Windows
+        if: ${{ matrix.os == 'windows-latest'}}
+        shell: pwsh  
+        run: |
+          & $env:GITHUB_ACTION_PATH\scripts\hello.ps1
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
