--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,12 +25,12 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-latest'}}
         shell: pwsh  
         run: |
-          & ${{env.GITHUB_ACTION_PATH}}/scripts/hello.ps1
+          & ./workflows/scripts/hello.ps1
       - name: Hello Windows
         if: ${{ matrix.os == 'windows-latest'}}
         shell: pwsh  
         run: |
-          & $env:GITHUB_ACTION_PATH\scripts\hello.ps1
+          & .\workflows\scripts\hello.ps1
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
