--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,11 +25,13 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-latest'}}
         shell: pwsh  
         run: |
-          & ./workflows/scripts/hello.ps1
+          echo "$(Get-Location)"
+          # & ./workflows/scripts/hello.ps1
       - name: Hello Windows
         if: ${{ matrix.os == 'windows-latest'}}
         shell: pwsh  
         run: |
+          echo "$(Get-Location)"
           & .\workflows\scripts\hello.ps1
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
