--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,7 +32,7 @@ jobs:
         shell: pwsh  
         run: |
           echo "$(Get-Location)"
-          & .\workflows\scripts\hello.ps1
+          & ".\workflows\scripts\hello.ps1"
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
