--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -50,6 +50,6 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-latest'}}
         shell: pwsh  
         run: |
-          ${{ github.action_path }}/scripts/cli-test.ps1
+          & "./.github/workflows/scripts/cli-test.ps1"
       - name: Check Circular Dependencies
         run: node ${{env.working-directory}}node_modules/madge/bin/cli.js --warning --circular --extensions ts ${{env.working-directory}}src/extension.ts
