--- a/extension/.vscode/tasks.json
+++ b/extension/.vscode/tasks.json
@@ -134,6 +134,20 @@
                 "clear": false
             },
             "problemMatcher": []
-        }
+        },
+        {
+            "label": "Run CLI tests",
+            "type": "shell",
+            "command": "${workspaceFolder}\\..\\.github\\workflows\\scripts\\cli-test.ps1",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": false
+            },
+            "problemMatcher": []
+        },
     ]
 }
