ci(telemetry): add new env variable for telemetry

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,6 +18,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
       working-directory: ./extension/
+      NAB_DISABLE_TELEMETRY: true
     steps:
       - name: Checkout
         uses: actions/checkout@v2
