--- a/extension/package.json
+++ b/extension/package.json
@@ -589,6 +589,12 @@
           "default": true,
           "description": "Specifies if anonymous telemetry can be sent to the developer. It is recommended to leave this on, so that the usage of this extension can be analyzed and the work effort can focus on the most used features. VSCode must be restarted to apply any changes to this setting.",
           "scope": "resource"
+        },
+        "NAB.EnableTroubleshootingCommands": {
+          "type": "boolean",
+          "default": false,
+          "description": "Specifies if troubleshooting commands for NAB AL Tools should be visible in the command palette. When you have enabled this setting, search for 'NAB: Troubleshooting' to find de enabled commands.",
+          "scope": "application"
         }
       }
     },
