--- a/extension/package.json
+++ b/extension/package.json
@@ -603,7 +603,7 @@
         "NAB.EnableTroubleshootingCommands": {
           "type": "boolean",
           "default": false,
-          "description": "Specifies if troubleshooting commands for NAB AL Tools should be visible in the command palette. When you have enabled this setting, search for 'NAB: Troubleshooting' to find de enabled commands.",
+          "description": "Specifies if troubleshooting commands for NAB AL Tools should be visible in the command palette. When you have enabled this setting, search for 'NAB: Troubleshooting' to find the enabled commands.",
           "scope": "application"
         }
       }
