--- a/extension/.nycrc.json
+++ b/extension/.nycrc.json
@@ -11,7 +11,8 @@
     "src/test/*",
     "src/NABfunctions.ts",
     "src/Telemetry.ts",
-    "src/XlfHighlighter.ts"
+    "src/XlfHighlighter.ts",
+    "src/Logging/*.ts"
   ],
   "reporter": [
     "text-summary",
