launch Automatic tests with coverage

--- a/extension/.vscode/launch.json
+++ b/extension/.vscode/launch.json
@@ -65,6 +65,25 @@
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
+            "name": "All Automatic Tests (coverage)",
+            "type": "extensionHost",
+            "request": "launch",
+            "runtimeExecutable": "${execPath}",
+            "env": {
+                "GITHUB_ACTION": "Truthy"
+            },
+            "args": [
+                "${workspaceFolder}/../test-app/TestApp.code-workspace",
+                "--extensionDevelopmentPath=${workspaceFolder}",
+                "--extensionTestsPath=${workspaceFolder}/out/test/suite/index-coverage"
+            ],
+            "outFiles": [
+                "${workspaceFolder}/out/test/**/*.js"
+            ],
+            "preLaunchTask": "npm: test-watch",
+            "internalConsoleOptions": "openOnSessionStart"
+        },
+        {
             "name": "Tests any workspace",
             "type": "extensionHost",
             "request": "launch",
