refactor(xliff/cache): XliffCache is now a class (#270)
refactor(xliff/cache): XliffCache is now a class.

--- a/extension/.nycrc.json
+++ b/extension/.nycrc.json
@@ -11,7 +11,8 @@
     "src/test/*",
     "src/NABfunctions.ts",
     "src/Telemetry.ts",
-    "src/XlfHighlighter.ts"
+    "src/XlfHighlighter.ts",
+    "src/Logging/*.ts"
   ],
   "reporter": [
     "text-summary",
@@ -21,6 +22,6 @@
   "report-dir": ".coverage",
   "statements": 82,
   "branches": 64,
-  "functions": 80,
+  "functions": 83,
   "lines": 82
 }
