Template Settings Syntax json schema

--- a/extension/package.json
+++ b/extension/package.json
@@ -623,6 +623,10 @@
       {
         "fileMatch": "*.dts.json",
         "url": "./syntaxes/dtsDictionarySyntax.json"
+      },
+      {
+        "fileMatch": "template.json",
+        "url": "./syntaxes/templateSettingsSyntax.json"
       }
     ]
   },
