--- a/extension/syntaxes/templateSettingsSyntax.json
+++ b/extension/syntaxes/templateSettingsSyntax.json
@@ -52,14 +52,14 @@
             "examples": [],
             "pattern": "^.*$"
           },
-          "searchAndReplace": {
-            "$id": "#root/mappings/items/searchAndReplace",
+          "placeholderSubstitutions": {
+            "$id": "#root/mappings/items/placeholderSubstitutions",
             "title": "Search and replace",
             "description": "Specifies any settings for Search and replace text in files",
             "type": "array",
             "default": [],
             "items": {
-              "$id": "#root/mappings/items/searchAndReplace/items",
+              "$id": "#root/mappings/items/placeholderSubstitutions/items",
               "title": "Items",
               "type": "object",
               "required": [
@@ -68,7 +68,7 @@
               ],
               "properties": {
                 "path": {
-                  "$id": "#root/mappings/items/searchAndReplace/items/path",
+                  "$id": "#root/mappings/items/placeholderSubstitutions/items/path",
                   "description": "Specifies the file path filter (glob pattern) that is used to select which files will be used for search & replace",
                   "title": "Path",
                   "type": "string",
@@ -79,7 +79,7 @@
                   "pattern": "^.*$"
                 },
                 "match": {
-                  "$id": "#root/mappings/items/searchAndReplace/items/match",
+                  "$id": "#root/mappings/items/placeholderSubstitutions/items/match",
                   "description": "Specifies the text that will be replaced",
                   "title": "Match",
                   "type": "string",
