--- a/extension/package.json
+++ b/extension/package.json
@@ -47,6 +47,7 @@
   "activationEvents": [
     "onLanguage:al",
     "workspaceContains:app.json",
+    "workspaceContains:al.template.json",
     "onCommand:al.go"
   ],
   "main": "./dist/extension.js",
@@ -258,6 +259,10 @@
       {
         "command": "nab.convertToPermissionSet",
         "title": "NAB: Convert to PermissionSet objects"
+      },
+      {
+        "command": "nab.createProjectFromTemplate",
+        "title": "NAB: Create AL Project from Template (preview)"
       },
       {
         "command": "nab.troubleshootParseCurrentFile",
@@ -618,6 +623,10 @@
       {
         "fileMatch": "*.dts.json",
         "url": "./syntaxes/dtsDictionarySyntax.json"
+      },
+      {
+        "fileMatch": "al.template.json",
+        "url": "./syntaxes/templateSettingsSyntax.json"
       }
     ]
   },
@@ -649,6 +658,7 @@
     "minimatch": "^3.0.4",
     "node-powershell": "^3.3.1",
     "original-fs": "^1.1.0",
+    "replace-in-file": "^6.3.2",
     "semver": "^7.3.5",
     "strip-json-comments": "^3.1.1",
     "time-stamp": "^1.1.0",
