feat: Renumber AL Objects (#279)
* feat: Renumber AL Objects
* feat: Renumber objects after AL project created from template
* feat: Template replaceSpacesWith
* test: Moved file operations inside suite

--- a/extension/syntaxes/templateSettingsSyntax.json
+++ b/extension/syntaxes/templateSettingsSyntax.json
@@ -126,13 +126,20 @@
                   "examples": [],
                   "pattern": "^.+$"
                 },
-                "removeSpaces": {
-                  "$id": "#root/mappings/items/renameFiles/items/removeSpaces",
+                "replaceSpaces": {
+                  "$id": "#root/mappings/items/renameFiles/items/replaceSpaces",
                   "title": "Remove Spaces",
-                  "description": "Specifies if any whitespace in the text that is used for replacing will get any whitespace removed.",
+                  "description": "Specifies if any whitespace in the text that is used for replacing will get any whitespace replaced.",
                   "type": "boolean",
                   "examples": [],
                   "default": false
+                },
+                "replaceSpacesWith": {
+                  "$id": "#root/mappings/items/renameFiles/items/replaceSpaces",
+                  "title": "Remove Spaces",
+                  "description": "Specifies what the whitespace should be replaced with if the replaceSpaces is `true`. Default is an empty string, which will remove any whitespace.",
+                  "type": "string",
+                  "default": ""
                 }
               }
             }
@@ -202,6 +209,14 @@
         ],
         "pattern": "^\\w+-\\w+$"
       }
+    },
+    "renumberObjects": {
+      "$id": "#root/mappings/items/renameFiles/items/renumberObjects",
+      "title": "Renumber objects",
+      "description": "Specifies if the AL objects should be renumbered according to the object range in app.json after all replacements are finished.",
+      "type": "boolean",
+      "examples": [],
+      "default": true
     }
   }
 }
