--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,7 +33,9 @@ jobs:
       - name: Run Tests (Windows)
         uses: GabrielBB/xvfb-action@v1
         if: ${{ matrix.os }} == windows-latest
-        run: npm runt test
+        with:
+          run: npm runt test
+          working-directory: ${{env.working-directory}}
       - name: Run tests
         uses: GabrielBB/xvfb-action@v1
         with:
