--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,7 +34,7 @@ jobs:
         uses: GabrielBB/xvfb-action@v1
         if: ${{ matrix.os }} == windows-latest
         with:
-          run: npm runt test
+          run: npm run test
           working-directory: ${{env.working-directory}}
       - name: Run tests
         uses: GabrielBB/xvfb-action@v1
