--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,14 +30,19 @@ jobs:
         working-directory: ${{env.working-directory}}
       - run: npx prettier --check .
         working-directory: ${{env.working-directory}}
-      - name: Run Tests (Windows)
-        uses: GabrielBB/xvfb-action@v1
-        if: ${{ matrix.os }} == windows-latest
-        with:
-          run: npm run test
-          working-directory: ${{env.working-directory}}
+      # - name: Run tests
+      #   uses: GabrielBB/xvfb-action@v1
+      #   with:
+      #     run: npx nyc npm run test:coverage
+      #     working-directory: ${{env.working-directory}}
       - name: Run tests
         uses: GabrielBB/xvfb-action@v1
+        with:
+          run: npm run test:coverage
+          working-directory: ${{env.working-directory}}
+      - name: Check Code Coverage
+        run:  npx nyc report --reporter=lcov --reporter=text-summary --check-coverage
+        working-directory: ${{env.working-directory}}
         with:
           run: npx nyc npm run test:coverage
           working-directory: ${{env.working-directory}}
